src/test/deca/context/valid/created/decl_var_invalid.deca
//decl_var_invalid.deca:2:4: no viable alternative at input 'int'
{
    int a,b,c,d=5;
}