src/test/deca/context/invalid/created/nonDeclaration.deca
//nonDeclaration.deca:3:11: la variable a n'est pas déclarée
{
    int a =a+5;
}